[package]
name = "waht"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "waht awesome hash tracker"
license = "MIT/Apache-2.0"
authors = ["Frando", "n0 team"]
repository = "https://github.com/n0-computer/waht"

[dependencies]
anyhow = "1.0.71"
blake3 = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
derive_more = "0.99.17"
dirs-next = "2.0.0"
ed25519-dalek = { version = "2.0.0-rc.2", features = ["serde", "rand_core"] }
futures = "0.3.28"
hex = "0.4.3"
num_cpus = "1.15.0"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
quinn = "0.10.1"
rand = "0.8.5"
rcgen = "0.10.0"
rustls = { version = "0.21.1", features = ["quic", "dangerous_configuration"] }
rustls-pemfile = "1.0.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_bytes = "0.11.9"
socket2 = { version = "0.5.3", features = ["all"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.3.1"
webpki-roots = "0.23.0"

[profile.bench]
debug = true
